--- a/flutter/ex/todo_list/pubspec.yaml
+++ b/flutter/ex/todo_list/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.25.4
   cloud_firestore: ^4.15.5
   flutter_slidable: ^3.0.1
+  firebase_auth: ^4.17.6
 
 dev_dependencies:
   flutter_test:
