--- a/flutter/makepdfs/pubspec.yaml
+++ b/flutter/makepdfs/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   pdf: ^3.10.8
   printing: ^5.12.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
